fix subscribe icon spacing

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -192,6 +192,10 @@ body {
 		li {
 			margin: 0 0 0 .5em !important;
 			display: inline-block;
+
+			.site-footer & {
+				margin: 0 .5em 0 0 !important;
+			}
 		}
 	}
 }
